--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,4 +4,16 @@
   <style name="Theme.ComposeDemo" parent="android:Theme.Material.Light.NoActionBar">
     <item name="android:statusBarColor">@color/purple_700</item>
   </style>
+
+  <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+    <item name="windowSplashScreenBackground">@color/white</item>
+    <!-- Use windowSplashScreenAnimatedIcon to add either a drawable or an
+         animated drawable. One of these is required. -->
+    <item name="windowSplashScreenAnimatedIcon">@drawable/ic_police</item>
+    <!-- Required for animated icons -->
+    <item name="windowSplashScreenAnimationDuration">200</item>
+    <!-- Set the theme of the Activity that directly follows your splash screen. -->
+    <!-- Required -->
+    <item name="postSplashScreenTheme">@style/Theme.ComposeDemo</item>
+  </style>
 </resources>
