--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
 <resources>
 
   <style name="Theme.ComposeDemo" parent="android:Theme.Material.Light.NoActionBar">
-    <item name="android:statusBarColor">@color/purple_700</item>
+    <item name="android:statusBarColor">@color/white</item>
   </style>
 
   <style name="Theme.App.Starting" parent="Theme.SplashScreen">
