--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
   <color name="teal_700">#FF018786</color>
   <color name="black">#FF000000</color>
   <color name="white">#FFFFFFFF</color>
+  <color name="bg_color">#FFFFFFFF</color>
+
+  <color name="colorPrimary">#FF00AAA1</color>
+  <color name="colorPrimaryDark">#FF007d75</color>
+  <color name="colorAccent">#FFD81B60</color>
 </resources>
